--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,5 +62,7 @@ dependencies {
     annotationProcessor 'org.parceler:parceler:1.1.12'
     implementation "androidx.viewpager2:viewpager2:1.0.0"
 
+    def lottieVersion = "3.7.2"
+    implementation "com.airbnb.android:lottie:$lottieVersion"
 
 }
