--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,4 +67,8 @@ dependencies {
     def lottieVersion = "3.7.2"
     implementation "com.airbnb.android:lottie:$lottieVersion"
 
+    implementation 'com.google.android.exoplayer:exoplayer:2.14.2'
+
+
+
 }
